--- a/Rapport/1Chapters/3SystemOverview/ChoiceOfHardware.tex
+++ b/Rapport/1Chapters/3SystemOverview/ChoiceOfHardware.tex
@@ -29,13 +29,13 @@ The TMDX5515EZDSP, seen in \autoref{fig:TMDX5515EZDSP_overview}, from Spectrum D
 \centering
 \begin{subfigure}[t]{0.47\textwidth}
 \includegraphics[width=\linewidth]{dsp_board}
-	\caption{TMDX5515EZDSP.}
+	\caption{TMDX5515EZDSP \citep{sou:DSPblock}.}
 	\label{fig:TMDX5515EZDSP}
 \end{subfigure}
 \hspace{6mm} 
 \begin{subfigure}[t]{0.35\textwidth}
 \includegraphics[width=\linewidth]{dsp_blockdiagram}
-	\caption{Block diagram overview of the TMDX5515EZDSP.}
+	\caption{Block diagram overview of the TMDX5515EZDSP \citep{sou:DSPblock2}.}
 	\label{fig:TMDX5515EZDSP_blockdiagram}
 \end{subfigure}
 \caption{Overview of the TMDX5515EZDSP.}
