new fixes igen igen

--- a/Rapport/00setup/mybib.bib
+++ b/Rapport/00setup/mybib.bib
@@ -137,6 +137,13 @@
 	year      = {1987},
 }
 
+@MISC{sou:I2C_prot,
+  title = {I2C protocol used to interface DSP with audio codec.},
+  author = {Texas Instruments},
+  note = {Downloaded May 23, 2016},
+  howpublished = {\url{http://www.ti.com/lit/ug/sprufo1a/sprufo1a.pdf}},
+  year = {2016},
+}
 
 
 
