--- a/Rapport/figures/BandModelCombine.tex
+++ b/Rapport/figures/BandModelCombine.tex
@@ -14,6 +14,7 @@ ymin=-0.1,
 ymax=0.8,
 ylabel={THD [\%]},
 ytick={-0.1, 0, 0.1,  0.2,  0.3, 0.4, 0.5, 0.6, 0.7, 0.8},
+yticklabels={-10,0,10,20,30,40,50,60,70,80},
 axis background/.style={fill=white},
 legend style={legend cell align=left,align=left,draw=white!15!black}
 %every axis legend/.code={\let\addlegendentry\relax}
